styles/coelesce.css
/* ... */
	
#login_search a,
#login_search a:visited {
	color: #fff;
}

#login_language {
	display: none; /*inline*/
}

#sitesearchbar {
	float: none;
	margin: 3px 0 0 0;
	padding: 0 0 0 15px;
	height: 33px;
	min-width: 180px;
	text-align: left;
	background: url(coelesce/search_wide.jpg) no-repeat;
	color: #517ea7;
}

#sitesearchbar .wrapper {
	height: 33px;
	background: url(coelesce/search_wide.jpg) 100% 0 no-repeat;
	margin: 0;
	padding: 0 35px 0 0;
}

#sitesearchbar form {
	padding-top: 8px;
	margin-right: 8px;
	font-size: 12px;
	white-space: nowrap;
}

#sitesearchbar ul.cssmenu * {
	width: 40px;
}

#sitesearchbar .findtitle input {
	border: none;
}

select[name="where"] {
	border: none;
}

select[name="where"],
input[name="search"] {
	display: inline;
}

#siteloginbar {
	position: relative;
	font-size: inherit;
}

#sitelocbar {
	float: left;
}

#sitetitles {
	color: #fff;
	display: inline;
	height: 97px;
	line-height: 97px;
	overflow: hidden;
	vertical-align: bottom;
}

#sitetitle,
#sitesubtitle {
	display: inline;
	white-space: nowrap;
	font-family: Arial, Helvetica, sans-serif;
	font-weight: bold;
	margin: 0;
	padding: 0;
	margin-bottom: 30px;
}

#sitetitle {
	color: #9eb8d5;
	font-size: 34px;
	display: inline;
}

#sitetitle a,
#sitetitle a:link,
#sitetitle a:visited,
#sitetitle a:hover {
	color: #9eb8d5;
	text-decoration: none;
}

#sitesubtitle {
	display: inline;
	margin-left: 14px;
	color: white;
	font-size: 14px;
	font-weight: normal;
}

#tiki-top {
	background: url(coelesce/pagebg.jpg) repeat-x;
	padding-top: 2px;
	clear: both;
}

#topbar_custom_code {
	background: #fff;
}

/* centercolumn */
#showhide_columns {
	min-width: 100%;
}

a.flip,
a.flip:visited,
.tellafriend a,
.tellafriend a:visited {
	color: silver;
}

a.flip:hover,
.tellafriend a:hover {
	color: #517ea7;
}

.tellafriend {
	padding: 0 30px;
}

.error,
#error {
	background: #f5f5f5 !important;
	color: #2d2d2d;
}

/****** Menus ******/
/** Links in menus **/
.separator a:link,
.separator a:visited,
.separator a:hover {
	color: #314e6f;
	font-weight: bold;
}

div.optionline,
.option a {
	color: #295c83;
	font-weight: bold;
}

.linkmenu:hover {
	color: #82a7c8;
}

a.linkmodule:hover {
	color: #82a7c8;
}

/** PHP Layers Menus **/
.horbar {
	width: 100%;
}
 
.horbar table {
	border-left: 1px solid #2e5276;
	border-right: 1px solid #acc4e0;
}

.horbaritem a,
.horbaritem a:visited {
	padding: 6px 10px;
	font-weight: bold;
	text-decoration: none;
	background: inherit;
	color: #cfe3fb;
	font-size: 12px;
	border-left: 1px solid #9eb8d5;
	border-right: 1px solid #264062;
}

.horbaritem a:hover {
	color: #fff !important;
	text-decoration: none;
}
 
.mdksubmenu {
	background: white;
	margin-top: 0;
}

.mdksubframe {
	border: 1px solid #5a7ea2;
	background: #ccdceb;
}

.mdkitem a {
	padding: 3px 6px;
	font-weight: normal;
	font-size: 1.2em;
}
 
.mdkitem a:link {
	font-weight: normal;
	text-decoration: none;
}
 
.mdkitem a:visited {
	text-decoration: none;
}
 
.mdkitem a:hover {
	color: #82a7c8;
	text-decoration: none;
	background: #eff8ff;
}

.phplmnormal,
a.phplmnormal:hover,
a.phplm:link,
a.phplm:visited,
a.phplm:hover,
a.phplm:active {
	font-family: Verdana, Tahoma, Arial, sans-serif;
	color: #295c8e;
	text-decoration: none;
	font-weight: normal;
}

a.phplm:visited {
	color: #295c8e;
}

a.phplm:hover {
	color: #82a7c8;
	text-decoration: underline;
	background: none;
}

a.phplm:active {
	color: #82a7c8;
}

a.phplmselected:link,
a.phplmselected:visited,
a.phplmselected:hover,
a.phplmselected:active {
	font: 100% Verdana, Tahoma, Arial, sans-serif;
	color: #2d2d2d;
	text-decoration: underline;
	font-weight: bold;
}

a.phplmselected:hover {
	color: #808080;
}

/** CSS (suckerfish) menus **/

/* typography, colors */
.cssmenu_horiz li a {
	padding: 6px 1em;
	font-weight: bold;
	font-size: 12px;
}

.box-data .cssmenu_vert li {
	background: #ccdceb !important;
}

.cssmenu_horiz ul li {
	color: #5a7ea2;
}

#tiki-top .cssmenu_horiz li:hover ul li:hover,
#tiki-top .cssmenu_horiz li.sfhover ul li.sfhover {
	background: #eff8ff;
	color: #5a7ea2;
}

#tiki-top .cssmenu_horiz li a:link,
#tiki-top .cssmenu_horiz li a:visited {
	text-decoration: none;
	background: inherit;
	color: #cfe3fb;
}

.cssmenu_vert li a {
	padding: 4px 6px;
	font-size: 1em;
	color: #295C83;
	font-weight: bold;
	text-decoration: none;
}

.cssmenu_horiz li ul li,
.cssmenu_vert li ul li {
	background:	#ccdceb;
	border: 1px solid #5a7ea2;
	border-top: 0;
	margin-bottom: -1px
}

.cssmenu_horiz li ul li:first-child,
.cssmenu_vert li ul li:first-child {
	border-top: 1px solid #5a7ea2;
}

/* compensate for 1px border */
.cssmenu_horiz li ul li ul,
.cssmenu_vert li ul li ul {
	top: -1px !important;
}

.cssmenu_vert li a:hover {
	color: #82a7c8;
	text-decoration: none;
}

#tiki-top > .cssmenu_horiz {
	padding-left: 20px;
	border-left: 1px solid #2e5276;
	border-right: 1px solid #acc4e0;
}

#tiki-top .cssmenu_horiz li a {
	border-left: 1px solid #acc4e0;
	border-right: 1px solid #2e5276;
	padding: 9px 1em 10px 1em;
}

#tiki-top .cssmenu_horiz li.menuSection a {
	padding-right: 2.6em;
}

#tiki-top .cssmenu_horiz li:hover,
#tiki-top .cssmenu_horiz li.sfhover {
	background: url(coelesce/pagebg.jpg) 0 -2px repeat-x;
}

#tiki-top .cssmenu_horiz ul li:hover,
#tiki-top .cssmenu_horiz ul li.sfhover {
	background: #ecf5ff;
}

#tiki-top .cssmenu_horiz ul li a:link,
#tiki-top .cssmenu_horiz ul li a:visited {
	color: #295c83;
}

#tiki-top .cssmenu_horiz li.menuLevel1 a {
	border: 0;
	padding: 6px 1em;
	background: #ccdceb;
}

#tiki-top .cssmenu_horiz li a:hover {
	color: #fff;
}

#tiki-top .cssmenu_horiz li ul li a:hover {
	color: #82a7c8;
}

/* left column width */
#col2 .cssmenu_vert,
#col2 .cssmenu_vert li {
	width: 180px;
}

/* offset from left column (matches above) */
#col2 .cssmenu_vert li:hover ul,
#col2 .cssmenu_vert li.sfHover ul {
	left: 170px;
}
/* ... */

