[FIX] Secondary site menu text/background contrast.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@25965 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/coelesce.css
+++ b/styles/coelesce.css
@@ -605,11 +605,16 @@ a.phplmselected:hover {
 	color: #5a7ea2;
 }
 
-#tiki-top .cssmenu_horiz li a:link,
-#tiki-top .cssmenu_horiz li a:visited {
+#header .cssmenu_horiz li a:link,
+#header .cssmenu_horiz li a:visited {
 	text-decoration: none;
 	background: inherit;
 	color: #cfe3fb;
+}
+
+#secondary_site_menu .cssmenu_horiz li ul li a:link,
+#secondary_site_menu .cssmenu_horiz li ul li a:visited {
+	color: #295C83;
 }
 
 .cssmenu_vert li a {
